# redshift-to-bigquery-migrator

./: .gcloudignore  .gitignore  deploy.sh  main.py  pyproject.toml  readme.md  requirements.txt
src/redshift_to_bigquery_migrator/: migrator.py
src/redshift_to_bigquery_migrator/sql/: unload.sql
