[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redshift_to_bigquery_migrator"
version = "0.0.1"
authors = [
  { name="Wesley Barros", email="wesleybarros950@gmail.com" },
]
description = ""
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"